docs: Actualizar documentación HTML
- Regenerar desde markdown actualizado
- Incluir correcciones de permisos IAM y texto
- Actualizar referencias a ramas renombradas
- Generar con doc-generator actualizado

--- a/modulo-1a-consola/02-dynamodb-table.html
+++ b/modulo-1a-consola/02-dynamodb-table.html
@@ -137,7 +137,7 @@
 </li>
 <li>
 <p><strong>Encryption at rest</strong>:<br />
-   - Deja <strong>"Owned by Amazon DynamoDB"</strong> (gratuito)</p>
+   - Deja <strong>"AWS owned key"</strong> (la primera opción, gratuita)</p>
 </li>
 <li>
 <p>Haz clic en <strong>"Create table"</strong></p>
